--- a/app/scss/components/darkMode.scss
+++ b/app/scss/components/darkMode.scss
@@ -1,51 +1,44 @@
-
 .dark {
     background-color: var(--veryDarkBlue-BG);
     color: var(--desaturatedBlue-Text);
-}
 
+    .header {
+        background-color: var(--veryDarkBlue-TopBGPattern);
 
-
-.darkHeader {
-    background-color: var(--veryDarkBlue-TopBGPattern);
-    
-    h1 {
-        color: var(--white-Text);
+        h1 {
+            color: var(--white-Text);
+        }
     }
 
-    .darkRadioBG {
-        background-image: linear-gradient(225deg, var(--Toggle-LG-end) 20%, var(--Toggle-LG-start) 80%);
-    }
-
-    .darkToogleBtn {
+    .card {
         background-color: var(--darkDesaturatedBlue-CardBG);
-    }
 
-}
+        &:hover {
+            transition: background 150ms ease-in-out;
+            background-color: var(--dark-card-hover);
+            cursor: pointer;
+        }
 
-
-.cardsDark {
-    background-color: var(--darkDesaturatedBlue-CardBG);
+        h2 {
+            color: var(--white-Text);
+        }
     
-    &:hover {
-        transition: background 150ms ease-in-out;
-        background-color: var(--dark-card-hover);
-        cursor: pointer;
+        h3 {
+            color: var(--white-Text);
+        }
     }
 
-    h2 {
-        color: var(--white-Text);
-    }
-
-    h3 {
-        color: var(--white-Text);
+    .overview {
+        h2 {
+            color: var(--white-Text);
+        }
     }
 }
 
-.darkColor {
-
-    h2 {
-        color: var(--white-Text);
-    }
+.darkRadioBG {
+    background-image: linear-gradient(225deg, var(--Toggle-LG-end) 20%, var(--Toggle-LG-start) 80%);
 }
 
+.darkToogleBtn {
+    background-color: var(--darkDesaturatedBlue-CardBG);
+}
