--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -49,11 +49,13 @@
         background-color: var(--toggle);
         pointer-events: none;
     }
-
+    
     .hover {
         background-image: linear-gradient(225deg, var(--Toggle-LG-end) 20%, var(--Toggle-LG-start) 80%);
+        transition: background-image 5s ease-in-out;
     }
-
+    
+    
     &__button {
         position: absolute;
         left: rem(3);
@@ -64,9 +66,9 @@
         border-radius: 50%;
         background-color: var(--white-BG);
         transition: all 150ms ease-in-out;
-        cursor: pointer;    
+        cursor: pointer;
     }
-    
+
     #lightM:checked ~ .toggle__button {
         left: calc(100% - 22px);
         right: 3px;
