--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -26,4 +26,7 @@
     --darkGrayishBlue-Text: hsl(228, 12%, 44%);
     --VeryDarkBlue-Text: hsl(230, 17%, 14%);
     --light-card-hover: hsl(228, 33%, 91%);
+
+    /* Transition */
+    --transition: all 150ms ease-in-out;
 }
