--- a/app/scss/components/darkMode.scss
+++ b/app/scss/components/darkMode.scss
@@ -1,4 +1,4 @@
-.dark {
+/*.dark {
     background-color: var(--veryDarkBlue-BG);
     color: var(--desaturatedBlue-Text);
 
@@ -41,4 +41,4 @@
 
 .darkToogleBtn {
     background-color: var(--darkDesaturatedBlue-CardBG);
-}
+}*/
