--- a/app/scss/components/cards.scss
+++ b/app/scss/components/cards.scss
@@ -4,7 +4,7 @@
     padding-inline: rem(23);
     padding-block-start: rem(26);
     font-size: rem(14);
-    background-color: var(--veryPaleBlue-TopBGPattern);
+    background-color: var(--bgTop);
     height: rem(225);
 
     @include breakpoint(large) {
@@ -24,7 +24,7 @@
         }
 
         h1 {
-            color: var(--VeryDarkBlue-Text);
+            color: var(--textColor2);
             font-size: rem(25);
 
             @include breakpoint(large) {
@@ -53,8 +53,7 @@
 
 
 
-.cards {
-    
+.cards {   
     @include breakpoint(large) {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -72,7 +71,7 @@ main {
 .card {
     padding: rem(25);
     margin-bottom: rem(30);
-    background-color: var(--lightGrayishBlue-CardBG);
+    background-color: var(--cardBg);
     border-radius: rem(5);
     display: grid;
     grid-template-areas: 
@@ -84,7 +83,7 @@ main {
 
     &:hover {
         transition: background 150ms ease-in-out;
-        background-color: var(--light-card-hover);
+        background-color: var(--cardHover);
         cursor: pointer;
     }
 
@@ -152,7 +151,7 @@ main {
         h2 {
             font-size: rem(50);
             font-weight: 700;
-            color: var(--VeryDarkBlue-Text);
+            color: var(--textColor2);
         }
 
         span {
@@ -231,7 +230,7 @@ main {
             align-self:center;
             vertical-align: middle;
             font-size: rem(25);
-            color: var(--VeryDarkBlue-Text);
+            color: var(--textColor2);
 
             @include breakpoint(large) {
                 align-self: center;
