--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     font-family: var(--font-Inter);
-    background-color: var(--white-BG);
-    color: var(--darkGrayishBlue-Text);
+    background-color: var(--bg);
+    color: var(--textColor);
     cursor: default;
 }
